logs/Slang/generated/hdlconv/hdlconvertor_p568.sv.log
name: hdlconvertor_p568
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p568.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p568.sv:1:1: error: language feature not yet supported
covergroup cg23;
^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p568.sv:10:1: error: language feature not yet supported
covergroup cg3;
^~~~~~~~~~~~~~~
